name:                math-grads
version:             0.1.3.0
homepage:            https://github.com/biocad/math-grads#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandr Sadovnikov
maintainer:          artemkondyukov, AlexKaneRUS, vks4git
copyright:           2017 Alexandr Sadovnikov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Grads.Algo.Cycles
                     , Math.Grads.Algo.Interaction
                     , Math.Grads.Algo.Isomorphism
                     , Math.Grads.Algo.Paths
                     , Math.Grads.Algo.Traversals
                     , Math.Grads.Drawing.Coords
                     , Math.Grads.Graph
                     , Math.Grads.GenericGraph
                     , Math.Grads.Utils
  other-modules:       Math.Grads.Drawing.Internal.Coords
                     , Math.Grads.Drawing.Internal.Cycles
                     , Math.Grads.Drawing.Internal.CyclesPathsAlignment
                     , Math.Grads.Drawing.Internal.Paths
                     , Math.Grads.Drawing.Internal.Sampling
                     , Math.Grads.Drawing.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , either
                     , linear
                     , math-angem
                     , matrix
                     , mtl
                     , random
                     , vector
  default-language:    Haskell2010

test-suite Coords-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Coords.hs
  build-depends:       base
                     , containers
                     , hspec
                     , math-grads
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Graph.hs
  build-depends:       base
                     , containers
                     , hspec
                     , math-grads
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Isomorphism-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Isomorphism.hs
  build-depends:       base
                     , array
                     , containers
                     , hspec
                     , math-grads
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/math-grads
