name:                math-grads
version:             0.1.6.2
synopsis:            Library containing graph data structures and graph algorithms
description:         Library containing graph data structures and graph algorithms.
                     .
                     Graph data structures:
                     .
                       * Graph type class;
                     .
                       * GenericGraph data structure.
                     .
                     Graph algorithms:
                     .
                       * Ullmann's subgraph isomorphism algorithm;
                     .
                       * drawing of planar graphs.
homepage:            https://github.com/biocad/math-grads#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandr Sadovnikov
maintainer:          artemkondyukov, AlexKaneRUS, vks4git
copyright:           2017 Alexandr Sadovnikov
category:            Math, Graph
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Grads.Algo.Cycles
                     , Math.Grads.Algo.Interaction
                     , Math.Grads.Algo.Isomorphism
                     , Math.Grads.Algo.Isomorphism.RI
                     , Math.Grads.Algo.Isomorphism.Types
                     , Math.Grads.Algo.Isomorphism.Ullman
                     , Math.Grads.Algo.Paths
                     , Math.Grads.Algo.SSSR
                     , Math.Grads.Algo.Traversals
                     , Math.Grads.Drawing.Coords
                     , Math.Grads.Graph
                     , Math.Grads.GenericGraph
                     , Math.Grads.Utils
  other-modules:       Math.Grads.Drawing.Internal.Coords
                     , Math.Grads.Drawing.Internal.Cycles
                     , Math.Grads.Drawing.Internal.CyclesPathsAlignment
                     , Math.Grads.Drawing.Internal.Paths
                     , Math.Grads.Drawing.Internal.Sampling
                     , Math.Grads.Drawing.Internal.Utils
                     
                     , Math.Grads.Angem
                     , Math.Grads.Angem.Internal.VectorOperations
                     , Math.Grads.Angem.Internal.MatrixOperations
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , array
                     , bimap
                     , containers
                     , linear
                     , matrix
                     , mtl
                     , ilist
                     , random
                     , vector
  default-language:    Haskell2010

test-suite Coords-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Coords.hs
  build-depends:       base
                     , containers
                     , hspec
                     , math-grads
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Graph.hs
  build-depends:       base
                     , containers
                     , hspec
                     , math-grads
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Isomorphism-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Isomorphism.hs
  build-depends:       base
                     , array
                     , containers
                     , hspec
                     , math-grads
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite SSSR-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SSSR.hs
  build-depends:       base
                     , array
                     , containers
                     , hspec
                     , math-grads
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/math-grads
