name:                math-graph
version:             0.0.0.1
homepage:            https://github.com/biocad/math-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandr Sadovnikov
maintainer:          artemkondyukov, AlexKaneRUS, vks4git
copyright:           2017 Alexandr Sadovnikov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Graph.Algo.Cycles
                     , Math.Graph.Algo.Interaction
                     , Math.Graph.Algo.Paths
                     , Math.Graph.Algo.Traversals
                     , Math.Graph.Class
                     , Math.Graph.GenericGraph
                     , Math.Graph.Utils
  other-modules:       Math.Graph.Drawing.Internal.Coords
                     , Math.Graph.Drawing.Internal.CyclesPathsAlignment
                     , Math.Graph.Drawing.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , linear
                     , math-angem
                     , mtl
                     , random
  default-language:    Haskell2010

test-suite Graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Graph.hs
  build-depends:       base
                     , containers
                     , math-graph
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/math-angem
